--- a/AnyCompositeFields/package.json
+++ b/AnyCompositeFields/package.json
@@ -9,10 +9,10 @@
     "start": "pcf-scripts start"
   },
   "dependencies": {
+    "@fluentui/react": "^7.123.9",
     "@types/jquery": "^3.3.38",
     "@types/node": "^10.12.18",
     "@types/powerapps-component-framework": "^1.2.0",
-    "office-ui-fabric-react": "^7.113.2",
     "react": "^16.13.1"
   },
   "devDependencies": {
