--- a/QuickEditFormLookup/package.json
+++ b/QuickEditFormLookup/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@fluentui/react": "^7.109.1",
     "@types/node": "^10.12.18",
-    "@types/powerapps-component-framework": "^1.3.0"
+    "@types/powerapps-component-framework": "^1.3.0",
+    "ts-loader": "^9.4.2",
+    "webpack": "^5.78.0"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.6",
